# qrsmth

./: Cargo.toml  README.md
src/: lib.rs  main.rs  matrix.rs  qr.rs  render.rs  util.rs
src/cli/: mod.rs
